# bevy

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
.serena/: project.yml
.serena/memories/: bevy_api_reference.md  delivery_summary.md  django_scopes_fix_and_test_connection.md  implementation_complete.md  implementation_plan.md  phase1_implementation_summary.md  phase2_completion.md  phase3_completion.md  phase3_final_report.md  phase3_implementation_strategy.md  phase4_completion.md  phase4_deliverables.md  phase4_executive_summary.md  phase4_final_summary.md  phase4_plan.md  pretix_plugin_overview.md
bevy/: apps.py  auth.py  client.py  forms.py  signals.py  tasks.py  urls.py  utils.py  views.py
bevy/locale/de_Informal/LC_MESSAGES/: django.po
bevy/templates/bevy/: event_settings.html  organizer_settings.html
tests/: test_integration.py
